--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" autocomplete="off" method="post" entype="multipart/form-data" action="https://32.javascript.htmlacademy.pro/kekstagram">
+          <form class="img-upload__form" id="upload-select-image" method="POST" entype="multipart/form-data" action="https://32.javascript.htmlacademy.pro/kekstagram" autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -199,7 +199,7 @@
   <!-- Шаблон изображения случайного пользователя -->
   <template id="picture">
     <a href="#" class="picture">
-      <img class="picture__img" src="" width="182" height="182" alt="Случайная фотография">
+      <img class="picture__img" src="#" width="182" height="182" alt="Случайная фотография">
       <p class="picture__info">
         <span class="picture__comments"></span>
         <span class="picture__likes"></span>
@@ -234,8 +234,8 @@
       </section>
     </template>
 
-    <script src="./js/main.js" type="module"></script>
     <script src="./vendor/pristine/pristine.min.js"></script>
+    <script src="./js/main.js" type="module"></script>
 
 </body>
 </html>
