--- a/10/index.html
+++ b/10/index.html
@@ -41,7 +41,7 @@
             </fieldset>
 
             <!-- Форма редактирования изображения -->
-            <div class="img-upload__overlay  "> <!-- вернуть hidden -->
+            <div class="img-upload__overlay hidden ">
               <div class="img-upload__wrapper">
                 <div class="img-upload__preview-container">
 
